tests/snapshot/error/source_locations/expression/binary/in.exp
TypeError: right side of 'in' must be an object
  ┌ source_locations/expression/binary/in.js:1:3
  |
1 | 1 in null
  |   ^
Stack trace:
  at <global> (source_locations/expression/binary/in.js:1:3)